finished up the API joke fetcher

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <h1>Get a Random Joke</h1>
-        <p id="joke"></p>
-        <button>Get Joke</button>
+        <p id="joke">The joke is gonna be shown here</p>
+        <button id="push">Get Joke</button>
     </div>
 </body>
 </html>
